[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/images/Background/Background2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/peaceful-piano-royalty-free-calm-relaxing-background-music-no-copyright_4eDxZ4Kb.mp3" type="AudioStream" id=3]
[ext_resource path="res://scripts/Match.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/images/Tileset1.png" type="Texture" id=6]
[ext_resource path="res://Other/Buttons/TitleScreenButton_Pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Other/Buttons/TitleScreenButton_Normal.tres" type="StyleBox" id=8]
[ext_resource path="res://Other/Buttons/TitleScreenButton_Hover.tres" type="StyleBox" id=9]
[ext_resource path="res://Other/Buttons/TitleScreenButton_Focused.tres" type="StyleBox" id=10]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 600, 1, 1 )
flag_disable_z = true
gravity = Vector3( 80, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/ALGER.TTF"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 542.5, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 290.5 )

[sub_resource type="TileSet" id=9]
0/name = "Tileset1.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 96, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Environment" id=10]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 0.552941 )

[sub_resource type="GradientTexture2D" id=16]
gradient = SubResource( 15 )
width = 1080
height = 600

[sub_resource type="DynamicFont" id=17]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 5 )

[node name="Scene" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundStuff" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="BackgroundStuff"]
modulate = Color( 0.156863, 0.27451, 0.27451, 1 )
scale = Vector2( 0.56, 0.56 )
texture = ExtResource( 1 )
centered = false

[node name="Particles2D" type="Particles2D" parent="BackgroundStuff"]
position = Vector2( 263, 17 )
amount = 100
lifetime = 4.0
randomness = 1.0
process_material = SubResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="BackgroundStuff"]
stream = ExtResource( 3 )
volume_db = -50.0
autoplay = true

[node name="MENU" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 60.0
custom_constants/margin_top = 10
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MENU"]
margin_left = 68.0
margin_top = 10.0
margin_right = 1005.0
margin_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 300

[node name="HBoxContainer" type="HBoxContainer" parent="MENU/HBoxContainer"]
margin_right = 127.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MENU/HBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 69.0
margin_bottom = 36.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.439216, 0.94902, 0.709804, 1 )
custom_fonts/font = SubResource( 4 )
text = "Name : "
align = 1
valign = 1

[node name="Name" type="Label" parent="MENU/HBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_top = 15.0
margin_right = 127.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.439216, 0.94902, 0.709804, 1 )
custom_fonts/font = SubResource( 6 )
text = "undefined"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MENU/HBoxContainer"]
margin_left = 427.0
margin_right = 540.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MENU/HBoxContainer/HBoxContainer2"]
margin_top = 13.0
margin_right = 91.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.439216, 0.94902, 0.709804, 1 )
custom_fonts/font = SubResource( 4 )
text = "Health : "
align = 1
valign = 1

[node name="Health" type="Label" parent="MENU/HBoxContainer/HBoxContainer2"]
margin_left = 95.0
margin_top = 15.0
margin_right = 113.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.439216, 0.94902, 0.709804, 1 )
custom_fonts/font = SubResource( 6 )
text = "100"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MENU/HBoxContainer"]
margin_left = 840.0
margin_right = 937.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MENU/HBoxContainer/HBoxContainer3"]
margin_top = 13.0
margin_right = 86.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.439216, 0.94902, 0.709804, 1 )
custom_fonts/font = SubResource( 4 )
text = "Bullet : "
align = 1
valign = 1

[node name="Bullet" type="Label" parent="MENU/HBoxContainer/HBoxContainer3"]
margin_left = 90.0
margin_top = 15.0
margin_right = 97.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.439216, 0.94902, 0.709804, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
valign = 1

[node name="Boundaries" type="StaticBody2D" parent="."]
modulate = Color( 1, 1, 1, 0.0392157 )

[node name="top" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 532.5, 0 )
shape = SubResource( 7 )

[node name="bottom" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 532.5, 600 )
shape = SubResource( 7 )

[node name="left" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 0, 299.5 )
shape = SubResource( 8 )

[node name="right" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 1066, 299.5 )
shape = SubResource( 8 )

[node name="TileMap" type="TileMap" parent="Boundaries"]
tile_set = SubResource( 9 )
cell_size = Vector2( 15, 15 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, 65535, 0, 0, 70, 0, 0, 131071, 0, 0, 65606, 0, 0, 196607, 0, 0, 131142, 0, 0, 262143, 0, 0, 196678, 0, 0, 327679, 0, 0, 262214, 0, 0, 393215, 0, 0, 327750, 0, 0, 458751, 0, 0, 393286, 0, 0, 524287, 0, 0, 458822, 0, 0, 589823, 0, 0, 524358, 0, 0, 655359, 0, 0, 589894, 0, 0, 720895, 0, 0, 655430, 0, 0, 786431, 0, 0, 720966, 0, 0, 851967, 0, 0, 786502, 0, 0, 917503, 0, 0, 852038, 0, 0, 983039, 0, 0, 917574, 0, 0, 1048575, 0, 0, 983110, 0, 0, 1114111, 0, 0, 1048646, 0, 0, 1179647, 0, 0, 1114182, 0, 0, 1245183, 0, 0, 1179718, 0, 0, 1310719, 0, 0, 1245254, 0, 0, 1376255, 0, 0, 1310790, 0, 0, 1441791, 0, 0, 1376326, 0, 0, 1507327, 0, 0, 1441862, 0, 0, 1572863, 0, 0, 1507398, 0, 0, 1638399, 0, 0, 1572934, 0, 0, 1703935, 0, 0, 1638470, 0, 0, 1769471, 0, 0, 1704006, 0, 0, 1835007, 0, 0, 1769542, 0, 0, 1900543, 0, 0, 1835078, 0, 0, 1966079, 0, 0, 1900614, 0, 0, 2031615, 0, 0, 1966150, 0, 0, 2097151, 0, 0, 2031686, 0, 0, 2162687, 0, 0, 2097222, 0, 0, 2228223, 0, 0, 2162758, 0, 0, 2293759, 0, 0, 2228294, 0, 0, 2359295, 0, 0, 2293830, 0, 0, 2424831, 0, 0, 2359366, 0, 0, 2490367, 0, 0, 2424902, 0, 0, 2490438, 0, 0, 2621439, 0, 0, 2555904, 0, 0, 2555905, 0, 0, 2555906, 0, 0, 2555907, 0, 0, 2555908, 0, 0, 2555909, 0, 0, 2555910, 0, 0, 2555911, 0, 0, 2555912, 0, 0, 2555913, 0, 0, 2555914, 0, 0, 2555915, 0, 0, 2555916, 0, 0, 2555917, 0, 0, 2555918, 0, 0, 2555919, 0, 0, 2555920, 0, 0, 2555921, 0, 0, 2555922, 0, 0, 2555923, 0, 0, 2555924, 0, 0, 2555925, 0, 0, 2555926, 0, 0, 2555927, 0, 0, 2555928, 0, 0, 2555929, 0, 0, 2555930, 0, 0, 2555931, 0, 0, 2555932, 0, 0, 2555933, 0, 0, 2555934, 0, 0, 2555935, 0, 0, 2555936, 0, 0, 2555937, 0, 0, 2555938, 0, 0, 2555939, 0, 0, 2555940, 0, 0, 2555941, 0, 0, 2555942, 0, 0, 2555943, 0, 0, 2555944, 0, 0, 2555945, 0, 0, 2555946, 0, 0, 2555947, 0, 0, 2555948, 0, 0, 2555949, 0, 0, 2555950, 0, 0, 2555951, 0, 0, 2555952, 0, 0, 2555953, 0, 0, 2555954, 0, 0, 2555955, 0, 0, 2555956, 0, 0, 2555957, 0, 0, 2555958, 0, 0, 2555959, 0, 0, 2555960, 0, 0, 2555961, 0, 0, 2555962, 0, 0, 2555963, 0, 0, 2555964, 0, 0, 2555965, 0, 0, 2555966, 0, 0, 2555967, 0, 0, 2555968, 0, 0, 2555969, 0, 0, 2555970, 0, 0, 2555971, 0, 0, 2555972, 0, 0, 2555973, 0, 0, 2555974, 0, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="StartMatch" type="Node2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="StartMatch"]
margin_right = 1080.0
margin_bottom = 600.0

[node name="TextureRect" type="TextureRect" parent="StartMatch/MarginContainer"]
margin_right = 1080.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 16 )

[node name="count_down" type="Label" parent="StartMatch/MarginContainer"]
visible = false
modulate = Color( 0.7, 0.7, 1.3, 1 )
margin_top = 239.0
margin_right = 1080.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 17 )
text = "..."
align = 1

[node name="btn_start_match" type="Button" parent="StartMatch/MarginContainer"]
visible = false
margin_left = 489.0
margin_top = 283.0
margin_right = 590.0
margin_bottom = 317.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
text = "Start Match"

[node name="EndMatch" type="Node2D" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="EndMatch"]
margin_right = 1080.0
margin_bottom = 600.0

[node name="TextureRect" type="TextureRect" parent="EndMatch/MarginContainer"]
margin_right = 1080.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 16 )

[node name="btn_end_match" type="Button" parent="EndMatch/MarginContainer"]
margin_left = 492.0
margin_top = 283.0
margin_right = 587.0
margin_bottom = 317.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
text = "Discconect"

[node name="UniversalPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="GunSpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="Frequency" type="Timer" parent="Camera2D"]

[node name="Duration" type="Timer" parent="Camera2D"]

[connection signal="pressed" from="StartMatch/MarginContainer/btn_start_match" to="." method="_on_btn_start_match_pressed"]
[connection signal="pressed" from="EndMatch/MarginContainer/btn_end_match" to="." method="_on_btn_end_match_pressed"]
[connection signal="timeout" from="GunSpawnTimer" to="." method="_on_GunSpawnTimer_timeout"]
